Fix Forgot Password card width to match Sign In and Register
The stub forgot-password.component.scss (dormant since the page was just
a placeholder <p> tag) had different .row/.col-lg-4 values than Sign In
and Register -- 15px/-15px instead of their 1px/-75px. Once the page had
real form content, that made the card render ~90px narrower than the
other auth pages, causing the cramped, truncated-placeholder look. Now
byte-identical to register.component.scss.

--- a/src/app/forgot-password/forgot-password.component.scss
+++ b/src/app/forgot-password/forgot-password.component.scss
@@ -71,8 +71,8 @@ element.style {
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+    margin-right: -75px;
+    margin-left: -75px;
 }
 
 // column
@@ -97,8 +97,8 @@ element.style {
     position: relative;
     width: 100%;
     min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: 1px;
+    padding-left: 1px;
 }
 
 // card register
